fix: ajout du manifest web dans index.html pour PWA et Vercel

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>blessed-notes-keeper</title>
     <meta name="description" content="Application de prise de notes chrétienne" />
     <meta name="author" content="" />
+    <link rel="manifest" href="./manifest.webmanifest" />
   </head>
 
   <body>
